# cpp-algo-lib

./: .gitignore  CMakeLists.txt  README.md  STATUS.MD
include/algolib/: genericalgos.hpp  helper_functions.hpp  search.hpp  sort.hpp
tests/: binary_search.cpp  bubble_sort.cpp  kadanes.cpp  merge_sort.cpp
